<resources>
    <string name="app_name" translatable="false">SmsForwarder</string>
    <string name="message_id_label">ID:</string>
    <string name="message_sender_label" translatable="false">Sender:</string>
    <string name="message_sim_id_label" translatable="false">Sim ID:</string>
    <string name="message_received_at_label" translatable="false">Received at:</string>
    <string name="message_forwarded_to_label" translatable="false">Forwarded to:</string>
    <string name="message_forwarded_at_label" translatable="false">Forwarded at:</string>
    <string name="message_forward_now_label" translatable="false">Forward Now</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_forward">Enable message forwarding</string>
    <string name="pref_description_forward">All received messages will be forwarded to the
        configured phone number.
    </string>
    <string name="pref_key_forward_switch">pref_key_forward_switch</string>
    <string name="pref_title_phone_number">Phone number</string>
    <string name="pref_key_phone_number">pref_key_phone_number</string>
    <string name="pref_key_sim_list">pref_key_sim_list</string>
    <string name="pref_title_sim_list">Sim for sending</string>

    <string name="pref_header_about">About</string>
    <string name="pref_title_app_version">App Version</string>
    <string name="pref_key_app_version">pref_key_app_version</string>

    <string name="pref_header_gmail">GMail</string>
    <string name="pref_title_gmail_forward">Enable GMail forwarding</string>
    <string name="pref_description_gmail_forward">All received messages will be forwarded to the
        configured GMail account.
    </string>
    <string name="pref_key_gmail_forward_switch">pref_key_gmail_forward_switch</string>
    <string name="pref_title_gmail_username">Username (email)</string>
    <string name="pref_key_gmail_username">pref_key_gmail_username</string>
    <string name="pref_title_gmail_password">Password</string>
    <string name="pref_key_gmail_password">pref_key_gmail_password</string>
</resources>
